load("@rules_cc//cc:defs.bzl", "cc_library")

_detail_hdrs = [
    "include/boost/test/detail/*.hpp",
]

cc_library(
    name = "test_internal",
    hdrs = glob(_detail_hdrs),
)

cc_library(
    name = "test",
    visibility = ["//visibility:public"],
    strip_include_prefix = "include",
    includes = ["include"],
    defines = ["BOOST_ALL_NO_LIB"],
    hdrs = glob(["include/**/*.hpp", "include/**/*.ipp"], exclude = _detail_hdrs),
    srcs = glob(["src/*.cpp"]),
    deps = [
        ":test_internal",
        "@boost//libs/config",
        "@boost//libs/type_traits",
        "@boost//libs/preprocessor",
        "@boost//libs/utility",
        "@boost//libs/smart_ptr",
        "@boost//libs/function",
        "@boost//libs/mpl",
        "@boost//libs/iterator",
        "@boost//libs/numeric_conversion",
        "@boost//libs/exception",
        "@boost//libs/algorithm",
        "@boost//libs/move",
    ]
)
